// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamSettings/OpenInvite should match snapshot on active with groupConstrained 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <div>
          <Memo(MemoizedFormattedMessage)
            defaultMessage="No, members of this team are added and removed by linked groups. <link>Learn More</link>"
            id="team_settings.openInviteDescription.groupConstrained"
            values={
              Object {
                "link": [Function],
              }
            }
          />
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  serverError=""
  submit={[Function]}
  title="Allow any user with an account on this server to join this team"
  updateSection={[Function]}
/>
`;

exports[`components/TeamSettings/OpenInvite should match snapshot on active without groupConstrained 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <fieldset>
        <legend
          className="form-legend hidden-label"
        >
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Invite Code"
            id="team_settings.openInviteDescription.ariaLabel"
          />
        </legend>
        <div
          className="radio"
        >
          <label>
            <input
              defaultChecked={false}
              id="teamOpenInvite"
              name="userOpenInviteOptions"
              onChange={[Function]}
              type="radio"
            />
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Yes"
              id="general_tab.yes"
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              defaultChecked={true}
              id="teamOpenInviteNo"
              name="userOpenInviteOptions"
              onChange={[Function]}
              type="radio"
            />
            <Memo(MemoizedFormattedMessage)
              defaultMessage="No"
              id="general_tab.no"
            />
          </label>
          <br />
        </div>
        <div
          className="mt-5"
        >
          <Memo(MemoizedFormattedMessage)
            defaultMessage="When allowed, a link to this team will be included on the landing page allowing anyone with an account to join this team. Changing from \\"Yes\\" to \\"No\\" will regenerate the invitation code, create a new invitation link and invalidate the previous link."
            id="general_tab.openInviteDesc"
          />
        </div>
      </fieldset>,
    ]
  }
  saving={false}
  section=""
  serverError=""
  submit={[Function]}
  title="Allow any user with an account on this server to join this team"
  updateSection={[Function]}
/>
`;

exports[`components/TeamSettings/OpenInvite should match snapshot on non active allowing open invite 1`] = `
<Connect(SettingItemMin)
  describe="Yes"
  section="open_invite"
  title="Allow any user with an account on this server to join this team"
  updateSection={[Function]}
/>
`;

exports[`components/TeamSettings/OpenInvite should match snapshot on non active with groupConstrained 1`] = `
<Connect(SettingItemMin)
  describe="No, members of this team are added and removed by linked groups."
  section="open_invite"
  title="Allow any user with an account on this server to join this team"
  updateSection={[Function]}
/>
`;

exports[`components/TeamSettings/OpenInvite should match snapshot on non active without groupConstrained 1`] = `
<Connect(SettingItemMin)
  describe="No"
  section="open_invite"
  title="Allow any user with an account on this server to join this team"
  updateSection={[Function]}
/>
`;
